--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.17.1",
+    "long-press-event": "^2.4.4",
+    "pug": "^3.0.2",
     "socket.io": "^4.1.2"
   },
   "scripts": {
     "start": "node index.js"
   }
+  
 }
